<resources>
    <string name="app_name">Task1</string>
    <string name="result_btn">Вычислить</string>
    <string name="hint_name">Имя</string>
    <string name="hint_height">Рост</string>
    <string name="hint_weight">Вес</string>
    <string name="hint_age">Возраст</string>

    <string name="calories">Калории</string>
    <string name="nds">НДС</string>
    <string name="mortgage">Ипотека</string>
    <string name="horoscope">Гороскоп</string>
    <string name="ndfl">НДФЛ</string>
</resources>