<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputWeight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="90dp"
        android:hint="@string/hint_weight"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/NDS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputHeight" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputHeight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_height"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/inputWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAge" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/hint_age"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/inputHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_name"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/inputAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/result_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="638dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/result_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_500"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/calories"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/NDS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight" />

    <TextView
        android:id="@+id/NDFL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="80dp"
        android:background="@color/purple_500"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/ndfl"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/result_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horoscope" />

    <TextView
        android:id="@+id/horoscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_500"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/horoscope"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/NDFL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage" />

    <TextView
        android:id="@+id/NDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_500"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/nds"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/mortgage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories" />

    <TextView
        android:id="@+id/mortgage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_500"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/mortgage"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/horoscope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NDS" />

</androidx.constraintlayout.widget.ConstraintLayout>